--- a/preloading.html
+++ b/preloading.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body>
+  <p>Hello</p>
     <div class="store-container">
         <div class="border-animation">
             <svg role="img" xmlns="http://www.w3.org/2000/svg" id="store" viewBox="130 0 1230 930">
